Add map zoom/pan Clean code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,9 @@
     "sourceType": "module"
   },
   "rules": {
+    "eol-last": [
+      "error", "always"
+    ],
     "indent": [
       "warn",
       2
