--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Migrations",
-  "name": "Migrations InfoVis",
+  "short_name": "Migration InfoVis",
+  "name": "World Migration InfoVis",
   "icons": [
     {
       "src": "favicon.ico",
