--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "dependencies": {
     "d3": "^5.7.0",
+    "d3-chord": "^1.0.6",
     "d3-fetch": "^1.1.2",
     "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
-    "topojson": "^3.0.2"
+    "topojson-client": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
