--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "d3-chord": "^1.0.6",
     "d3-fetch": "^1.1.2",
     "gh-pages": "^2.0.1",
+    "rc-slider": "^8.6.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "react-select": "^2.1.2",
+    "store": "^2.0.12",
     "topojson-client": "^3.0.0"
   },
   "scripts": {
