--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
     "react-select": "^2.1.2",
+    "react-switch": "^3.0.4",
     "store": "^2.0.12",
     "topojson-client": "^3.0.0"
   },
