--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "rc-slider": "^8.6.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.5",
     "react-select": "^2.1.2",
     "react-switch": "^3.0.4",
     "store": "^2.0.12",
